# openmove-tmd

./: .env.example  .gitignore  LICENSE  README.md  pyproject.toml
docs/: architecture.md  methodology.md  results.md  usage.md
models/: trento_20260612_202641_meta.json
production/: DEPLOY.it.md  DEPLOY.md
research/: README.md  bootstrap_ci.py  device_map.py  e10_spatial_map.py  e11_temporal_patterns.py  e12_feature_power.py  e13_class_feature_dist.py  e14_domain_shift.py  e15_cross_dataset_features.py  e16_feature_importance.py  e17_sensor_complementarity.py  e18_silver_vs_gt.py  e19_abstain.py  e1_gps_raw.py  e20_gt_noise_audit.py  e22_gt_physics.py  e23_eval_validity.py  e27_physical_universality.py  e28_class_prior_shift.py  e29_modal_split.py  e2_imu_raw.py  e3_overview.py  e4_sessions.py  e5_windows.py  e6_feature_select.py  e7_gps_mnar.py  e8_trips_gt.py  e9_class_dist.py  error_surfacing_freeze.py  feature_separation_boxplots.py  fig_cm_thesis.py  geolife_full_matrix.py  geolife_infra_separation.py  labeler_threshold_robustness.py  load_geolife.py  load_geolife_infra_china.py  protocol_on_shl.py  rq1_3_self_correction.py  rq1_6_silver_vs_random.py  rq2_1_feature_groups.py  (+21 more)
tests/: test_aggregate.py  test_labeler.py  test_regression.py
tmd/: __init__.py
tmd/aggregate/: __init__.py
tmd/cli/: __init__.py  aggregate_cmd.py  eval_transfer.py  label_silver.py  main.py  predict.py  run_pipeline.py  train.py
tmd/config/: __init__.py  city_config.py
tmd/datasets/: __init__.py  openmove_raw.py
tmd/evaluation/: __init__.py  frame_eval.py  transfer.py
(+27 files in other folders)
