[project]
name = "openmove-tmd"
version = "0.1.0"
description = "Label-free transportation mode detection from smartphone GPS and IMU"
readme = "README.md"
license = { file = "LICENSE" }
requires-python = ">=3.11"
dependencies = [
    "pandas>=3.0,<4",
    "numpy>=2.4,<3",
    "scikit-learn>=1.8,<2",
    "pyarrow>=23",
    "scipy>=1.17",
    "pyyaml>=6.0",
    "pymongo>=4.16,<5",
]

[project.optional-dependencies]
research = ["matplotlib>=3.10", "seaborn>=0.13", "cleanlab>=2.9", "xgboost>=3.2", "lightgbm>=4.6"]
dev = ["pytest>=8"]

[project.scripts]
tmd = "tmd.cli.main:main"

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["tmd*"]

[tool.setuptools.package-data]
tmd = ["configs/cities/*.yaml"]

[tool.pytest.ini_options]
markers = ["slow: riallena il modello, richiede i dati congelati locali"]
